# cdp-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: constants.rs  lib.rs  main.rs  types.rs
src/handlers/: errors.rs  mod.rs  setup.rs
src/handlers/aliases/: aliases.rs  edit.rs  list.rs  mod.rs  remove.rs
src/handlers/command_aliases/: cmd_aliases.rs  cmd_list.rs  edit_cmd.rs  execute.rs  mod.rs  remove_cmd.rs
src/handlers/create_project/: create_project.rs
src/handlers/general/: change_dir_current.rs  editors.rs  ls.rs  mod.rs  see_alias.rs  vsc.rs
src/utils/: create_cdputils.rs  mod.rs  parse_path.rs
src/utils/setup/: create_cdp_cmdaliases.rs  create_cdpaliases.rs  create_cdputils.rs  create_projects.rs  mod.rs
tests/: aliases.rs  create_project.rs  general.rs
tests/assets/: tokkitomare_the_goat.txt
