[package]
name = "cdp-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["tokkitomare"]
description = "CDP - This CLI helps you quickly navigate to a directory and perform useful operations on it."
repository = "https://github.com/tokkitomare/cdp-cli"
readme = "README.md"
keywords = ["cli", "cdp", "cdprogram", "useful"]
categories = ["command-line-interface"]

[[bin]]
name = "cdp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
